<resources>
    <string name="app_name">JustJava2</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity">0</string>
    <string name="initial_price">$5</string>
    <string name="order_summary">Order summary</string>
    <string name="order">order</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="name_hint">Name</string>
    <string name="name_colon">Name: </string>
    <string name="thank_you">Thank you!</string>
    <string name="total">Total: $</string>
    <string name="quantity_colon">"Quantity: "</string>
    <string name="add_chocolate">"Add chocolate? "</string>
    <string name="add_whipped_cream">Add whipped cream? </string>
    <string name="you_cant_have_less">You can\'t have less than 1 coffee</string>
    <string name="you_cant_have_more">You can\'t have more than 100 coffees</string>
</resources>
