<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context="com.example.android.justjava2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:padding="@dimen/common_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding"
            android:text="@string/toppings"
            android:textAllCaps="true" />

        <CheckBox
            android:id="@+id/add_whipped_cream_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_big_margin"
            android:paddingLeft="@dimen/checkbox_padding_left"
            android:text="@string/whipped_cream"
            android:textSize="@dimen/common_text_size" />

        <CheckBox
            android:id="@+id/add_chocolate_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_big_margin"
            android:paddingLeft="@dimen/checkbox_padding_left"
            android:text="@string/chocolate"
            android:textSize="@dimen/common_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding"
            android:text="@string/quantity"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:layout_width="@dimen/plus_button_size"
                android:layout_height="@dimen/plus_button_size"
                android:layout_marginBottom="@dimen/common_big_margin"
                android:layout_marginLeft="@dimen/common_small_margin"
                android:layout_marginRight="@dimen/common_small_margin"
                android:onClick="decrement"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_quantity"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/common_text_size" />

            <Button
                android:layout_width="@dimen/plus_button_size"
                android:layout_height="@dimen/plus_button_size"
                android:layout_marginLeft="@dimen/common_small_margin"
                android:onClick="increment"
                android:text="@string/plus" />


        </LinearLayout>

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/common_padding"
            android:text="@string/initial_price"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/common_text_size" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_small_margin"
            android:onClick="submitOrder"
            android:text="@string/order" />
    </LinearLayout>

</ScrollView>
